# conancrates

./: .gitignore  CLI_GUIDE.md  CONAN_INTEGRATION.md  CONAN_UPLOAD_GUIDE.md  DEPLOYMENT.md  DOWNLOAD_GUIDE.md  MINIO_SETUP.md  README.md  RESUME_SESSION.md  RUST_CRATES_GUIDE.md  STORAGE_AND_UPLOAD.md  UPLOAD_GUIDE.md  WEB_UI_GUIDE.md  create_sample_data.py  manage.py  requirements.txt
conancrates/: asgi.py  conancrates.py  settings.py  urls.py  wsgi.py
rust_crates/: testpkg-a-sys-1.0.0.crate  testpkg-b-sys-1.0.0.crate  testpkg-c-sys-1.0.0.crate
rust_crates/testpkg-a-sys/: Cargo.toml  README.md  build.rs
rust_crates/testpkg-a-sys/include/testpkg_a/: testpkg_a.h
rust_crates/testpkg-a-sys/native/current/: testpkg_a.lib
rust_crates/testpkg-a-sys/src/: lib.rs
rust_crates/testpkg-b-sys/: Cargo.toml  README.md  build.rs
rust_crates/testpkg-b-sys/include/testpkg_b/: testpkg_b.h
rust_crates/testpkg-b-sys/native/current/: testpkg_b.lib
rust_crates/testpkg-b-sys/src/: lib.rs
rust_crates/testpkg-c-sys/: Cargo.toml  README.md  build.rs
rust_crates/testpkg-c-sys/include/testpkg_c/: testpkg_c.h
rust_crates/testpkg-c-sys/native/current/: testpkg_c.lib
rust_crates/testpkg-c-sys/src/: lib.rs
