[package]
name = "testpkg-a-sys"
version = "1.0.0"
edition = "2021"
links = "testpkg_a"

# Include the binaries and headers in the published crate
include = [
    "src/**/*",
    "native/**/*",
    "include/**/*",
    "build.rs",
    "Cargo.toml",
]

[lib]
name = "testpkg_a_sys"
path = "src/lib.rs"

# Optional: Add description, license, etc. from conanfile.py if available
# description = "Rust bindings for testpkg_a"
# license = "MIT"
# repository = "https://github.com/..."

[dependencies]
testpkg-b-sys = { version = "1.0.0", path = "../testpkg-b-sys" }
testpkg-c-sys = { version = "1.0.0", path = "../testpkg-c-sys" }
